fixed chat alignment *height*

--- a/src/components/comment-container/comment-container.styles.scss
+++ b/src/components/comment-container/comment-container.styles.scss
@@ -5,6 +5,7 @@
   flex: 1;
   overflow: scroll;
   scrollbar-width: thin;
+  scrollbar-color: hotpink black;
 }
 
 .message-list-container::-webkit-scrollbar {
@@ -19,7 +20,7 @@
 }
 
 .message {
-  color: #DB0A5B;
+  color: #db0a5b;
   padding: 8px 10px;
   margin-right: 8px;
   margin-bottom: 8px;
@@ -37,7 +38,6 @@
   align-self: flex-end;
   text-align: right;
   box-shadow: 0 0 5px rgba(178, 208, 248, 1); /* Glowing effect */
-
 }
 
 .sender {
@@ -47,11 +47,12 @@
 input[type="text"] {
   font-size: 16px;
   width: 100%;
-  padding: 12px 20px;
+  background-color: black;
+  // padding: 12px 20px;
   box-sizing: border-box;
   border: none;
-  border-bottom: 1px solid grey;
-  color: grey;
+  // border-bottom: 1px solid grey;
+  // color: rgb(178, 208, 248) ;
 }
 
 .input-container {
